LinodeKubernetes/60-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: traininglog
  name: sites
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "traininglog.hemsida.eu"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: traininglog-service
                port:
                  number: 80
    - host: "test3.traininglog.hemsida.eu"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: traininglog-service
                port:
                  number: 80
